--- a/EUC/EUCProfileBuddy/frmProfileDetail.resx
+++ b/EUC/EUCProfileBuddy/frmProfileDetail.resx
@@ -778,4 +778,10 @@
         5Dbw/wFW6x0puiOiFgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="colSetting.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colDetail.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
